# search-core-cpp

./: .clangd  .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: benchmarks.cpp.001A1D78EFEFEC73.idx  benchmarks.h.7BF6652560E4A3B2.idx  docmagnitude.cpp.E5D75582D1693F5C.idx  docmagnitude.h.56432D52C704ABC2.idx  docnorms.cpp.D083CBB1605A63B8.idx  docnorms.h.04FE63719BCE223A.idx  frequency.cpp.8A6761FF1FD09DA8.idx  frequency.cpp.CFB91CE5DE4C9182.idx  frequency.h.02FD5CD3C6FBDB98.idx  frequency.h.E3237206A3225361.idx  heapOptmization.cpp.E72765A0F6887B36.idx  heapOptmization.h.236215430821EFC0.idx  main.cpp.4F8ABA78B54C13B2.idx  main.cpp.AA2045832199696D.idx  query.cpp.A8DD750A40B3ADE6.idx  query.h.BF53FEF1E8B84D50.idx  serialization.cpp.319CC84589BDF6D1.idx  serialization.h.585A2F2E10196DDE.idx  (+6 more)
Documentation/: Tokenizer-Frequency.md  indexing_pipeline.md  tfidf_notes.md
data/: 10KB.txt  1MB.txt  2MB.txt  article1.txt  article2.txt  article3.txt  article4.txt  article5.txt  article6.txt  fileNames.txt
data/test/: 1MB.txt  doc1.txt  doc2.txt  doc3.txt  hh.txt  small.txt
include/: benchmarks.h  deserialization.h  docmagnitude.h  docnorms.h  frequency.h  heapOptmization.h  query.h  serialization.h  tfIdfcalc.h  tokenizer.h
src/: benchmarks.cpp  deserialization.cpp  docmagnitude.cpp  docnorms.cpp  frequency.cpp  heapOptmization.cpp  main.cpp  processdb.cpp  query.cpp  serialization.cpp  tfIdfcalc.cpp  tokenizer.cpp  updateToDB.cpp
src/.cph/: .main.cpp_15949021700443b766cd36d692436f25.prob
test/: huge.txt  large.txt  medium.txt
